# docs/swagger.json
@@ -31,7 +31,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.FileInfo"
+                            "$ref": "#/definitions/file_info.FileInfo"
                         }
                     },
                     "400": {
@@ -63,15 +63,7 @@
         }
     },
     "definitions": {
-        "file_info.HttpResponseErr": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.FileInfo": {
+        "file_info.FileInfo": {
             "type": "object",
             "properties": {
                 "filename_hash": {
@@ -81,14 +73,14 @@
                     "type": "string"
                 },
                 "status": {
-                    "$ref": "#/definitions/models.FileInfoStatus"
+                    "$ref": "#/definitions/file_info.FileInfoStatus"
                 },
                 "timestamp": {
                     "type": "string"
                 }
             }
         },
-        "models.FileInfoStatus": {
+        "file_info.FileInfoStatus": {
             "type": "string",
             "enum": [
                 "recieved",
@@ -98,12 +90,20 @@
                 "error"
             ],
             "x-enum-varnames": [
-                "FileInfoStatusRecieved",
-                "FileInfoStatusInQueue",
-                "FileInfoStatusProcessing",
-                "FileInfoStatusDone",
-                "FileInfoStatusError"
+                "StatusRecieved",
+                "StatusInQueue",
+                "StatusProcessing",
+                "StatusDone",
+                "StatusError"
             ]
+        },
+        "file_info.HttpResponseErr": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
         }
     }
 }
