# internal/file_info/handler.go
@@ -1,7 +1,0 @@
-package file_info
-
-import "github.com/gin-gonic/gin"
-
-type Handler interface {
-	GetFileInfo(c *gin.Context)
-}
