# internal/file_info/handler/handler.go
@@ -1,13 +1,25 @@
 package handler
 
 import (
+	"context"
+
 	"github.com/arturyumaev/file-processing/internal/file_info"
+	"github.com/gin-gonic/gin"
 )
 
-type handler struct {
-	svc file_info.Service
+//go:generate mockgen -source=handler.go -destination=../mocks/service.go
+type Service interface {
+	GetFileInfo(ctx context.Context, name string) (*file_info.FileInfo, error)
 }
 
-func New(svc file_info.Service) file_info.Handler {
+type Handler interface {
+	GetFileInfo(c *gin.Context)
+}
+
+type handler struct {
+	svc Service
+}
+
+func New(svc Service) Handler {
 	return &handler{svc}
 }
